--- a/client/produit.html
+++ b/client/produit.html
@@ -4,6 +4,16 @@
             <div class="input-group mb-3">
                 <input type="search" class="form-control" placeholder="search">
                 <span class="input-group-text"><i class="bi-search"></i></span>
+                <a href="#/panier" class="">
+                    <button type="button" class="btn btn-primary position-relative">
+
+                        <i class="bi bi-cart-plus"></i>
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                              id="item_counter">
+                        0
+                    </span>
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -11,7 +21,6 @@
     </div>
     <!-- Affichage de la liste de produits-->
     <div class="row" id="list_items">
-
 
     </div>
 
