--- a/client/accueil.html
+++ b/client/accueil.html
@@ -1,17 +1,27 @@
+<br>
 <h1 id="para-1" class="centrer">Bienvenu chez Pro-Gramme</h1>
+<br>
 <section id="menu-gauche">
-  <a href="#para-1" onclick="clicMenuGauche(this)">Premier paragraphe</a>
-  <a href="#para-2" onclick="clicMenuGauche(this)">Second paragraphe</a>
-  <a href="#para-3" onclick="clicMenuGauche(this)">Troisième paragraphe</a>
+  <a href="#para-2">À Propos</a>
+  <a href="#para-3">Nous Contacter</a>
 </section>
 <section id="texte-acceuil">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi distinctio, doloremque ex facere fugit illo? Amet asperiores dicta earum eveniet, hic impedit libero nisi, nulla qui quia recusandae voluptate voluptatum.</p>
-  <h2 id="para-2">Sous titre du paragraphe 2</h2>
-  <p><img src="images/supp.png" alt="Image de suppléments"/>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur corporis eos ipsum iure nostrum quis reprehenderit veritatis voluptas voluptate. Blanditiis ea enim itaque labore soluta, tempore temporibus tenetur voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores fugit laboriosam modi necessitatibus praesentium quia rem sed suscipit unde. Aut beatae error eum laboriosam minima quas quia similique veritatis.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquid, distinctio, explicabo illum labore laudantium maxime modi molestias obcaecati quis rem suscipit voluptate. Dolorum mollitia perspiciatis quae temporibus voluptatem.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquid, distinctio, explicabo illum labore laudantium maxime modi molestias obcaecati quis rem suscipit voluptate. Dolorum mollitia perspiciatis quae temporibus voluptatem.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquid, distinctio, explicabo illum labore laudantium maxime modi molestias obcaecati quis rem suscipit voluptate. Dolorum mollitia perspiciatis quae temporibus voluptatem.</p>
-  <h2 id="para-3">Sous-titre du paragraphe 3</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquid, distinctio, explicabo illum labore laudantium maxime modi molestias obcaecati quis rem suscipit voluptate. Dolorum mollitia perspiciatis quae temporibus voluptatem.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias aliquid, distinctio, explicabo illum labore laudantium maxime modi molestias obcaecati quis rem suscipit voluptate. Dolorum mollitia perspiciatis quae temporibus voluptatem.</p>
+  <p>Livraison gratuite sur des commandes de plus de $8 000 000!</p>
+  <h2 id="para-2">À Propos</h2>
+  <p style="padding-right: 1px">Pro-gramme est un distributeur de suppléments sportifs exclusifs basé en Estrie.
+    Fondé en Octobre 2021, Pro-gramme a depuis atteint plus de 4 0000 000 de clients à travers le monde. Notre équipe de chercheurs permet
+    d'offrir à nos clients des produits de qualités à bas prix.
+  </p>
+  <br>
+
+  <h2 id="para-3">Nous Contacter</h2>
+  <p>Siège Social: <br>
+    215, rue Interfaces et multimédias, Sherbrooke (Québec), J2E 1D5<br><br>
+
+    Courriel: <br>
+    info@ProGrammeSupplements.com<br><br>
+
+    Téléphone: <br>
+    1 888 215-2152
+  </p>
 </section>
