--- a/client/index.html
+++ b/client/index.html
@@ -27,18 +27,15 @@
 <body>
 <header id="navigation">
     <nav>
-        <a href="#"><img src="images/logo.png" alt="Logo de Pro-Gramme" /></a><br />
+        <div id="logoProgramme">
+            <a href="#"><img src="images/logo.png" alt="Logo de Pro-Gramme" width = "150" height = "150"/></a><br />
+        </div>
         <div id="menu-principal">
             <div class="barre-menu">
                 <a href="#/" >Accueil</a>
                 <a href="#/inscription">Inscription</a>
                 <a href="#/produit" id="menu_produit">Produits</a>
-                <div class="deroulant"><button class="btn-deroulant">À propos</button>
-                    <div class="sous-menu">
-                        <a href="#/points_de_vente">Points de ventes</a>
-                        <a href="histoire.html">Notre histoire</a>
-                    </div>
-                </div>
+                <a href="#/points_de_vente">Points de ventes</a>
             </div>
         </div>
     </nav>
