12 nouveaux produits dans 3 catégories (Suppléments,Nourriture,Bouteilles) et ajout filtres

--- a/client/produit.html
+++ b/client/produit.html
@@ -19,6 +19,14 @@
 
 
     </div>
+    <h2 id="filtresProduits">Filtres</h2>
+    <table id="tableFiltres">
+        <th><button type="button" class="btn btn-primary position-relative">Tous les produits</button></th>
+        <th><button type="button" class="btn btn-primary position-relative">Suppléments</button></th>
+        <th><button type="button" class="btn btn-primary position-relative">Nourriture</button></th>
+        <th><button type="button" class="btn btn-primary position-relative">Bouteilles</button></th>
+    </table>
+    <br>
     <!-- Affichage de la liste de produits-->
     <div class="row" id="list_items">
 
