--- a/client/produit.html
+++ b/client/produit.html
@@ -21,10 +21,10 @@
     </div>
     <h2 id="filtresProduits">Filtres</h2>
     <table id="tableFiltres">
-        <th><button type="button" class="btn btn-primary position-relative">Tous les produits</button></th>
-        <th><button type="button" class="btn btn-primary position-relative">Suppléments</button></th>
-        <th><button type="button" class="btn btn-primary position-relative">Nourriture</button></th>
-        <th><button type="button" class="btn btn-primary position-relative">Bouteilles</button></th>
+        <th><button type="button" class="btn btn-primary position-relative" onclick="chargerproduit()">Tous les produits</button></th>
+        <th><button type="button" class="btn btn-primary position-relative" onclick="chargerProduitSupplements()">Suppléments</button></th>
+        <th><button type="button" class="btn btn-primary position-relative" onclick="chargerProduitNourriture()">Nourriture</button></th>
+        <th><button type="button" class="btn btn-primary position-relative" onclick="chargerProduitBouteilles()">Bouteilles</button></th>
     </table>
     <br>
     <!-- Affichage de la liste de produits-->
