structure page commande avec vérifications

--- a/client/panier.html
+++ b/client/panier.html
@@ -4,7 +4,6 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-
                     <th scope="col">Nom</th>
                     <th scope="col">Prix</th>
                     <th scope="col">Qte</th>
@@ -18,9 +17,14 @@
         </div>
 
         <div class="col-md-2">
-            <h5>Total: <span id="total"></span></h5>
+            <h5>Total: $<span id="total"></span></h5>
         </div>
 
+        <div style="text-align: center">
+            <a href="#/commande" class="">
+                <button type="button" class="btn btn-primary position-relative" style="width:50%" onclick="">Commander</button>
+            </a>
+        </div>
     </div>
 </section>
 
