--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
     <script src="scripts/points_de_vente.js"></script>
     <script src="scripts/produit.js"></script>
     <script src="scripts/navigation.js"></script>
+    <script src="scripts/verification.js"></script>
 
 </head>
 <body>
