Création du bouton et page connexion

--- a/client/inscription.html
+++ b/client/inscription.html
@@ -5,7 +5,7 @@
     <a href="#para-3">Troisième paragraphe</a>
 </section>
 <section id="section-inscription">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime necessitatibus odit perspiciatis porro, temporibus tenetur voluptas voluptatem voluptatum. Libero, officia!</p>
+    <p>Inscrivez-vous au Pro-Gramme pour bénéficier de tous les avantages des membres!</p>
     <table id="table-inscription">
         <caption>Types d'abonnement</caption>
         <tr>
