--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,11 @@
         <div id="logoProgramme">
             <a href="#"><img src="images/logo.png" alt="Logo de Pro-Gramme" width = "150" height = "150"/></a><br />
         </div>
+        <div class="boutonConnexion">
+            <a href="#/connexion">
+                <button class="btn btn-primary btn-lg">Connexion</button>
+            </a>
+        </div>
         <div id="menu-principal">
             <div class="barre-menu">
                 <a href="#/" >Accueil</a>
