Enregistrement des informations de connexion dans le fichier clients.json

--- a/client/inscription.html
+++ b/client/inscription.html
@@ -46,12 +46,24 @@
                 <input type="text" name="nom" id="nom" required/>
             </div>
             <div class="group">
-                <label for="courriel">Adresse courriel</label>
+                <label for="age">Age</label>
+                <input type="text" name="age" id="age" required/>
+            </div>
+            <div class="group">
+                <label for="adresse">Adresse</label>
+                <input type="text" name="adresse" id="adresse" required/>
+            </div>
+            <div class="group">
+                <label for="pays">Pays</label>
+                <input type="text" name="pays" id="pays" required/>
+            </div>
+            <div class="group">
+                <label for="courriel">Courriel</label>
                 <input type="email" name="courriel" id="courriel" required/>
             </div>
             <div class="group">
-                <label for="mot-de-passe">Mot de passe</label>
-                <input type="password" name="mot-de-passe" id="mot-de-passe" required/>
+                <label for="mdp">Mot de passe</label>
+                <input type="password" name="mdp" id="mdp" required/>
             </div>
         </fieldset>
         <fieldset>
@@ -65,8 +77,8 @@
                 </select>
             </div>
         </fieldset>
-        <div class="group submit-group">
-            <input type="submit" value="Soumettre">
+        <div class="bouton_inscription">
+            <input type="button" class="btn btn-primary" value="Inscription" onclick="inscrireNewClient()" />
         </div>
     </form>
 </section>
