--- a/client/inscription.html
+++ b/client/inscription.html
@@ -1,11 +1,6 @@
 <h1 id="para-1" class="centrer">Inscription au Pro-Gramme</h1>
-<section id="menu-gauche">
-    <a href="#para-1">Premier paragraphe</a>
-    <a href="#para-2">Second paragraphe</a>
-    <a href="#para-3">Troisième paragraphe</a>
-</section>
 <section id="section-inscription">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam at consectetur consequuntur doloremque eligendi et illum iusto maxime necessitatibus odit perspiciatis porro, temporibus tenetur voluptas voluptatem voluptatum. Libero, officia!</p>
+    <p>Inscrivez-vous pour bénéficier des avantages membres Pro-Gramme!</p>
     <table id="table-inscription">
         <caption>Types d'abonnement</caption>
         <tr>
@@ -16,22 +11,22 @@
         <tr>
             <td>Basique</td>
             <td>15$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Accès à tous les produits de base offerts chez Pro-Gramme.</td>
         </tr>
         <tr>
             <td>Premium</td>
             <td>50$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Accès à tous les produits de base offerts chez Pro-Gramme. Possibilité de participer au programme de fidélité.</td>
         </tr>
         <tr>
             <td>Entraîneur</td>
             <td rowspan="2">75$</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Accès à tous les produits de base et les produits exclusifs offerts chez Pro-Gramme. Possibilité de participer au programme de fidéité.</td>
         </tr>
         <tr>
             <td>Athlète</td>
             <!--<td>75$</td>-->
-            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aut beatae consequatur corporis distinctio doloremque dolorum excepturi!</td>
+            <td>Livraison gratuite. Accès à tous les produits de base et les produits exclusifs offerts chez Pro-Gramme. Possibilité de participer au programme de fidéité.</td>
         </tr>
     </table>
     <form method="post" action="confirmation.html">
