pour tester gestion Commande

--- a/client/accueil.html
+++ b/client/accueil.html
@@ -1,5 +1,5 @@
 <br>
-<h1 id="para-1" class="centrer">Bienvenu chez Pro-Gramme</h1>
+<h1 id="para-1" class="centrer">Bienvenue chez Pro-Gramme</h1>
 <br>
 <section id="menu-gauche">
   <a href="#para-2">À Propos</a>
