--- a/client/panier.html
+++ b/client/panier.html
@@ -20,9 +20,9 @@
             <h5>Total: $<span id="total"></span></h5>
         </div>
 
-        <div style="text-align: center">
+        <div style="text-align: center" onclick="confirmation()">
             <a href="#/commande" class="">
-                <button type="button" class="btn btn-primary position-relative" style="width:50%" onclick="">Commander</button>
+                <button type="button" class="btn btn-primary position-relative" onclick="">Commander</button>
             </a>
         </div>
     </div>
