--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
     <script src="scripts/produit.js"></script>
     <script src="scripts/navigation.js"></script>
     <script src="scripts/verification.js"></script>
-
+    <script src="scripts/vente.js"></script>
 </head>
 <body>
 <header id="navigation">
@@ -37,6 +37,7 @@
                 <a href="#/inscription">Inscription</a>
                 <a href="#/produit" id="menu_produit">Produits</a>
                 <a href="#/points_de_vente">Points de ventes</a>
+                <a href="#/ventes">Gestion de commandes</a>
             </div>
         </div>
     </nav>
