--- a/client/connexion.html
+++ b/client/connexion.html
@@ -15,8 +15,8 @@
                     <input type="email" class="form-control" id="courriel" aria-describedby="emailHelp" placeholder="Entrez votre courriel">
                 </div>
                 <div class="form-group">
-                    <label for="mot-de-passe">Mot de passe</label>
-                    <input type="password" class="form-control" id="mot-de-passe" placeholder="Entrez votre mot de passe">
+                    <label for="mdp">Mot de passe</label>
+                    <input type="password" class="form-control" id="mdp" placeholder="Entrez votre mot de passe">
                 </div>
                 <div class="bouton_Connexion">
                     <input type="button" class="btn btn-primary" value="Connexion" onclick="versCommande()" />
