Bouton connexion, page de connexion, enregistrement d'un nouveau client lors de l'inscription,  connexion d'un client avec ses infos

--- a/client/connexion.html
+++ b/client/connexion.html
@@ -19,11 +19,10 @@
                     <input type="password" class="form-control" id="mdp" placeholder="Entrez votre mot de passe">
                 </div>
                 <div class="bouton_Connexion">
-                    <input type="button" class="btn btn-primary" value="Connexion" onclick="versCommande()" />
+                    <input type="button" class="btn btn-primary" value="Se connecter" onclick="ConnexionUtilisateur(); changerTexteConnexion()" />
                 </div>
             </form>
         </div>
-
             <p>Vous n'avez pas d'abonnement chez Pro-Gramme?</p>
         <div id="QuestionInscription">
                 <a href="#/inscription" >Inscrivez-vous!</a>
