--- a/client/inscription.html
+++ b/client/inscription.html
@@ -73,7 +73,7 @@
             </div>
         </fieldset>
         <div class="bouton_inscription">
-            <input type="button" class="btn btn-primary" value="Inscription" onclick="inscrireNewClient()" />
+            <input type="button" class="btn btn-primary" value="Inscription" onclick="inscriptionClient()" />
         </div>
     </form>
 </section>
