gestion des ventes

--- a/client/ventes.html
+++ b/client/ventes.html
@@ -4,6 +4,7 @@
         <th style="width: 33%;"># Commande</th>
         <th style="width: 33%;">Date</th>
         <th style="width: 33%;">Status</th>
+        <th style="width: 33%;">button</th>
     </tr>
     <tr style="border:1px solid #cccccc">
     </tr>
