--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 <header id="navigation">
     <nav>
         <div id="logoProgramme">
-            <a href="#"><img src="images/logo.png" alt="Logo de Pro-Gramme" width = "150" height = "150"/></a><br />
+            <a href="#/"><img src="images/logo.png" alt="Logo de Pro-Gramme" width = "150" height = "150"/></a><br />
         </div>
         <div id="menu-principal">
             <div class="barre-menu">
