--- a/client/commande.html
+++ b/client/commande.html
@@ -74,7 +74,7 @@
         <br>
         <br>
         <a onclick="commanderPanier()">
-            <button type="button" class="btn btn-primary position-relative" style="left:50%;">Commander</button>
+            <button type="submit" class="btn btn-primary position-relative" style="left:50%;">Commander</button>
         </a>
     </form>
 
