Bouton connexion, page de connexion, enregistrement d'un nouveau client lors de l'inscription,  connexion d'un client avec ses infos

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
                 <a href="#/inscription">Inscription</a>
                 <a href="#/produit" id="menu_produit">Produits</a>
                 <a href="#/points_de_vente">Points de ventes</a>
+                <a href="#/aide">Aide</a>
             </div>
         </div>
     </nav>
