--- a/client/inscription.html
+++ b/client/inscription.html
@@ -75,6 +75,9 @@
         <div class="bouton_inscription">
             <input type="button" class="btn btn-primary" value="Inscription" onclick="inscriptionClient()" />
         </div>
+        <div class="texteInscription">
+            <p hidden> "Merci de votre inscription chez Pro-gramme!"</p>
+        </div>
     </form>
 </section>
 
