Delete d'un item du panier fonctionnel

--- a/client/panier.html
+++ b/client/panier.html
@@ -8,6 +8,7 @@
                     <th scope="col">Prix</th>
                     <th scope="col">Qte</th>
                     <th scope="col">Total</th>
+                    <th scope="col">Retirer</th>
                 </tr>
                 </thead>
                 <tbody id="cart_details">
