--- a/client/ventes.html
+++ b/client/ventes.html
@@ -1,12 +1,12 @@
-<table  id="vente_table" style="width: 100%;">
+<table  id="vente_table" class="table">
     <thead>
     <tr>
         <th style="width: 33%;"># Commande</th>
         <th style="width: 33%;">Date</th>
         <th style="width: 33%;">Status</th>
-        <th style="width: 33%;">button</th>
+        <th style="width: 33%;">Ajouter</th>
     </tr>
-    <tr style="border:1px solid #cccccc">
+    <tr>
     </tr>
     </thead>
     <tbody id="list_ventes">
