Bouton connexion, page de connexion, enregistrement d'un nouveau client lors de l'inscription,  connexion d'un client avec ses infos

--- a/client/aide.html
+++ b/client/aide.html
@@ -41,12 +41,12 @@
     <br>
 
     <h2 id="para-7">Pannier</h2>
-    <p>paragraphe inscription
+    <p>La page panier contient tous les items que vous avez ajouter dans votre panier à partir de la page produit. Cette page est seulement accessible si vous êtes connecté à votre compte. Sur cette page vous pouvez retirer des produits de votre panier. De plus, vous pouvez voire le montant total de tous vos articles qui se retrouve dans votre panier à droite de la page.
     </p>
     <br>
 
     <h2 id="para-8">Commande</h2>
-    <p>paragraphe inscription
+    <p>La page commande est la place où vous finaliser votre transaction. Elle est seulement accessible à partir de la page panier. Vous devez entrée vos informations personnelles afin de procéder à la livraison ainsi que les informations sur votre méthode de paiement.
     </p>
     <br>
 </section>
