--- a/client/panier.html
+++ b/client/panier.html
@@ -21,9 +21,9 @@
             <h5>Total: $<span id="total"></span></h5>
         </div>
 
-        <div style="text-align: center" onclick="confirmation()">
+        <div style="text-align: center">
             <a href="#/commande" class="">
-                <button type="button" class="btn btn-primary position-relative" onclick="">Commander</button>
+                <button id="btnCommanderPanier" type="button" class="btn btn-primary position-relative" onclick="confirmation()">Commander</button>
             </a>
         </div>
     </div>
