--- a/client/aide.html
+++ b/client/aide.html
@@ -4,49 +4,57 @@
 <h1 id="para-1" class="centrer">Page d'aide du site Pro-Gramme.</h1>
 <br>
 <section id="menu-gauche">
-    <a href="#para-2">Acceuil</a>
+    <a href="#para-2">Accueil</a>
     <a href="#para-3">Inscription</a>
     <a href="#para-4">Produits</a>
     <a href="#para-5">Points de ventes</a>
-    <a href="#para-6">Connextion</a>
+    <a href="#para-6">Connexion</a>
     <a href="#para-7">Panier</a>
     <a href="#para-8">Commande</a>
 </section>
 <section id="texte-acceuil">
-    <p>Sur cette page vous trouverz tout les explications de chaque page si vous avez des questions sur leur fonctionement ou leur utilité</p>
+    <p>Sur cette page vous trouverez tous les explications pour chaque page du site Pro-Gramme.</p>
 
-    <h2 id="para-2">Acceuil</h2>
-    <p> La page d'accueil est l'introduction de notre site web. Vous pouvez retrouver une petite description de l'entreprise. De plus, la page d'accueil contient les informations comme notre siège social, notre adresse e-mail et notre numéro de téléphone si jamais vous voulez nous contacter personnellement.
+    <h2 id="para-2">Accueil</h2>
+    <p> La page d'accueil est l'introduction de notre site web. Vous pouvez retrouver une petite description de l'entreprise.
+        De plus, la page d'accueil contient les informations comme notre siège social, notre adresse e-mail et notre numéro de
+        téléphone si jamais vous voulez nous contacter personnellement.
     </p>
     <br>
 
     <h2 id="para-3">Inscription</h2>
-    <p>La page d’inscription est l’endroit que vous pouvez aller pour vous créer un nouveau compte, afin de pouvoir passer une commande à la fin de votre magasinage. Vous retrouverez les informations sur les différents types d’abonnement que vous pouvez vous procurez. Par la suite, dans les bulles respectives, vous devez entrée les informations pour votre compte et le type d’abonnement voulu. Si jamais vous avez déjà utilisé votre adresse e-mail pour crée un compte avec nous, l’inscription ne marchera pas et vous devriez passer à la page connexion pour vous connecter
+    <p>C'est sur la page d'inscription que vous pouvez créer un nouveau compte, afin de pouvoir passer une commande à la fin de
+        votre magasinage. Vous y retrouverez les informations sur les différents types d’abonnement disponibles.
     </p>
     <br>
 
     <h2 id="para-4">Produits</h2>
-    <p>La page produit est là que vous trouverez l’éventail de nos produits. Chaque produit contient une image, un prix unitaire et une petite description de ce dernier. De plus, chaque produit contient un petit icone que vous pouvez cliquer si jamais vous voulez l’ajouter à votre panier. En haut de la page produit vous pouvez retrouver des filtres pour catégoriser les types de produits que vous recherchez et une barre de recherche si vous recherchez un produit en particulier. Finalement en haut à droite de la page se trouve un bouton qui vous redirigera vers la page de votre panier.
+    <p>En haut de la page, vous retrouverez des filtres pour catégoriser les types de produits et une barre
+        de recherche si vous cherchez un produit en particulier. Finalement en haut à droite de la page se
+        trouve un bouton qui vous redirigera vers votre panier.
     </p>
     <br>
 
-    <h2 id="para-5">Poitns de ventes</h2>
-    <p>La page points de ventes est là que vous retrouvez l’adresse de tout nos succursale ainsi que leurs heures d’ouvertures.
+    <h2 id="para-5">Points de ventes</h2>
+    <p>C'est sur la page points de ventes que vous retrouverez l’adresse de toutes nos succursales ainsi que leurs heures d’ouvertures.
     </p>
     <br>
 
     <h2 id="para-6">Connexion</h2>
-    <p>La page connexion sert à vous connecter si vous avez déjà créé un compte sur notre site web. En vous connectant, vous pouvez personnaliser votre panier et récupérer les items que vous avez déjà mis dans votre panier lors de votre dernière visite.
+    <p>La page connexion sert à vous connecter si vous avez déjà créé un compte. En vous connectant, vous pouvez
+        personnaliser votre panier et récupérer les items que vous avez déjà mis dans votre panier lors de votre dernière visite.
     </p>
     <br>
 
-    <h2 id="para-7">Pannier</h2>
-    <p>La page panier contient tous les items que vous avez ajouter dans votre panier à partir de la page produit. Cette page est seulement accessible si vous êtes connecté à votre compte. Sur cette page vous pouvez retirer des produits de votre panier. De plus, vous pouvez voire le montant total de tous vos articles qui se retrouve dans votre panier à droite de la page.
+    <h2 id="para-7">Panier</h2>
+    <p>La page panier contient tous les items que vous avez ajoutés dans votre panier. Cette page
+        est seulement accessible si vous êtes connecté à votre compte. Sur cette page vous pouvez retirer des produits de votre panier.
+        De plus, vous pouvez voir le montant total de votre panier.
     </p>
     <br>
 
     <h2 id="para-8">Commande</h2>
-    <p>La page commande est la place où vous finaliser votre transaction. Elle est seulement accessible à partir de la page panier. Vous devez entrée vos informations personnelles afin de procéder à la livraison ainsi que les informations sur votre méthode de paiement.
+    <p>La page commande est la place où vous finalisez votre transaction. Elle est seulement accessible à partir de la page panier. Vous devez entrer vos informations personnelles afin de procéder à la livraison, ainsi que les informations sur votre méthode de paiement.
     </p>
     <br>
 </section>
