--- a/client/connexion.html
+++ b/client/connexion.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="sectionInput">
-            <form action="#/accueil">
+            <form>
                 <div class="form-group">
                     <label for="courriel">Courriel</label>
                     <input type="email" class="form-control" id="courriel" aria-describedby="emailHelp" placeholder="Entrez votre courriel" required>
