--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
                 <a href="#/inscription">Inscription</a>
                 <a href="#/produit" id="menu_produit">Produits</a>
                 <a href="#/points_de_vente">Points de ventes</a>
-                <a href="#/ventes">Gestion de commandes</a>
+                <a id="enTeteGestionCommande" href="#/ventes" hidden>Gestion de Commande</a>
                 <a href="#/aide">Aide</a>
             </div>
         </div>
