--- a/client/merci.html
+++ b/client/merci.html
@@ -3,4 +3,5 @@
     <h1>Commande confirmée!</h1>
     <p>Merci d'avoir magasiné chez Pro-Gramme</p>
     <p>Nous espérons que vous serez satisfait de vos achats!</p>
+    <p>Vous êtes maintenant déconnecté.</p>
 </div>
